# eplusout-mcp

./: .gitignore  ANALYSIS_SUMMARY.md  ASHRAE901_HotelLarge_STD2025_Buffalo_SkipEC_gshp.idf  CLAUDE.md  CLEANUP_SUMMARY.txt  COOLING_COIL_ANALYSIS_SUMMARY.md  README.md  analysis_summary.py  analyze_cooling_sizing.py  analyze_wshp_cooling_sizing.py  coincidence_analysis_optimized.py  component_sizing_summary_output.txt  cooling_coil_analysis.py  cooling_coil_analysis_results.csv  cooling_coil_sizing_analysis.py  cooling_coil_sizing_analysis_output.csv  direct_coincidence_analysis.py  extract_sizing_data.py  main.py  mcp_coincidence_analysis.py  mcp_tools_payloads.json  peak_coincident_day_analysis.py  peak_coincident_day_hourly_data.csv  peak_coincident_day_hourly_data_optimized.csv  pyproject.toml  query_component_sizing.py  serve.py  sizing_extraction_summary.md  test_logging.py  test_refactor.py  wshp_cooling_coil_analysis.csv
.claude/: settings.local.json
ai-docs/: ADDITIONAL_QUICK_FIXES.md  CODE_REVIEW_SUMMARY.md  SECURITY_FIXES_APPLIED.md  SECURITY_REVIEW.md
example-files/: ASHRAE901_HotelLarge_STD2013_Atlanta.dd.err  ASHRAE901_HotelLarge_STD2013_Atlanta.dd.sql  ASHRAE901_HotelLarge_STD2013_Atlanta.dd.table.htm  ASHRAE901_HotelLarge_STD2013_Atlanta.epJSON  ASHRAE901_HotelLarge_STD2013_Atlanta.err  ASHRAE901_HotelLarge_STD2013_Buffalo.dd.err  ASHRAE901_HotelLarge_STD2013_Buffalo.dd.sql  ASHRAE901_HotelLarge_STD2013_Buffalo.dd.table.htm  ASHRAE901_HotelLarge_STD2013_Buffalo.epJSON  ASHRAE901_HotelLarge_STD2013_Buffalo.err  about.md  tempfiles.md
src/: CLAUDE.md  (+5 more)
(+19 files in other folders)
